# kappa

./: CMakeLists.txt  README.md  rebuild.sh
cmake/: CodeCoverage.cmake  FindYaml.cmake  ParseAndAddCatchTests.cmake
examples/: CMakeLists.txt
examples/approximations/: CMakeLists.txt
examples/basic/: CMakeLists.txt
examples/interaction/: CMakeLists.txt
examples/mixtures/: CMakeLists.txt
examples/particles/: CMakeLists.txt
src/: CMakeLists.txt
src/approximations/: CMakeLists.txt
src/interactions/: CMakeLists.txt
src/mixtures/: CMakeLists.txt
src/numerics/: CMakeLists.txt
src/particles/: CMakeLists.txt
tests/: CMakeLists.txt
